# rules_nodejs_jest_example

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  jest.bzl  package.json  tsconfig.json
src/: BUILD.bazel
src/components/: BUILD.bazel  moduleA.ts  moduleB.ts
src/components/__tests__/: BUILD.bazel  moduleB.test.ts
